<resources>
    <string name="app_name">TMV_DUmmy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ashutosh Wahane</string>
    <string name="nav_header_subtitle">willskhalifa@yopmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tmv">TMV</string>
    <string name="department">Department</string>
    <string name="classroom">ClassRoom</string>
    <string name="announcement">Announcement</string>
    <string name="help">Help</string>
    <string name="feedback">FeedBack</string>
    <string name="communicate">Communicate</string>
    <string name="message">Message</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
