<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_school_black"
            android:title="@string/tmv" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_computer_black"
            android:title="@string/department" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_local_library"
            android:title="@string/classroom" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/announcement" />
        <item
            android:id="@+id/new_item1"
            android:icon="@mipmap/bot"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/feedback" />
    </group>


</menu>
