<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdrawer.ui.home.HomeFragment"
        android:label="@string/tmv"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navdrawer.ui.gallery.GalleryFragment"
        android:label="@string/department"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/classroom"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.navdrawer.ui.tools.ToolsFragment"
        android:label="@string/announcement"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navdrawer.ui.share.ShareFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.navdrawer.ui.send.SendFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_send" />
</navigation>